--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Icecream.github.com</h1>
-          <h2>Ice Cream Shop</h2>
+          <h1>Ice Cream Shop</h1>
+          <h2>iPhone and iPod Touch app</h2>
         </header>
 
         <section id="downloads" class="clearfix">
