--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <hr>
 
         <section id="main_content">
-          <p>Ice Cream Shop</p>
+          <!--[if mozilla]>
+    <p>Oops. Looks like you need to have an iphone to see this.</p>
+    <![endif]-->
         </section>
 
         <footer>
