--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
         <hr>
 
         <section id="main_content">
-          <!--[if mozilla]>
-    <p>Oops. Looks like you need to have an iphone to see this.</p>
-    <![endif]-->
+        <script type="text/javascript">
+if (var isSafari =)
+  {
+  x="Welcome aboard!"
+  }
+else
+  {
+  x="Oops. Looks like you're not visiting the app from an iPhone. try it again.";
+  }
+  </script>
         </section>
 
         <footer>
