--- a/index.html
+++ b/index.html
@@ -28,16 +28,25 @@
         <hr>
 
         <section id="main_content">
-        <script type="text/javascript">
-if (var isSafari =)
-  {
-  x="Welcome aboard!"
-  }
-else
-  {
-  x="Oops. Looks like you're not visiting the app from an iPhone. try it again.";
-  }
-  </script>
+        <div id="instructions-mozilla" style="display: none;">
+  Instructions for Mozzila...
+</div>
+<div id="instructions-ie" style="display: none;">
+  Instructions for IE...
+</div>
+<div id="instructions-generic">
+  Generic instructions...
+</div>
+
+<script type="text/javascript">
+  var btype = "generic";
+  document.getElementById("instructions-" + btype).style.display = "none";
+
+  if(window.mozilla) btype = "mozzila";
+  else if(window.ActiveXObject) btype = "ie";
+
+  document.getElementById("instructions-" + btype).style.display = "block";
+</script>
         </section>
 
         <footer>
