--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="apple-touch-startup-image" href="http://cloud.github.com/downloads/n4more/icecream/icecreamloadinglandscape.png" />
+    <link rel="apple-touch-icon" href="http://cloud.github.com/downloads/n4more/icecream/icecreamicon.png"/>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
