--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         </header>
 
         <section id="downloads" class="clearfix">
+        <h1>Welcome to the <em>Tienda de Elado.</em></h1>
+        <p>(The ice Cream Shop)<br/>
+          Where you can sell your ice cream to all varieties of customers, and even your friends!<br/>
+          </p>
+          <h1>How do I get it?</h1>
+        <p>Just visit this site with your iPhone or iPod Touch (Coming to iPad soon!)
+          Tap on "Open" and save to "Home screen" and then it's 'Play Time'!
+        </p>
           </section>
 
         <hr>
