--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section id="downloads" class="clearfix">
         <h1>Welcome to the <em>Tienda de Elado.</em></h1>
-        <p>(The Ice Cream Shop)<br/>
+        <p>(a.k.a. The Ice Cream Shop)<br/>
           Where you can sell your ice cream to all varieties of customers, your friends and post to facebook!<br/>
           </p>
           <h1>How do I get it?</h1>
